# my_bot

./: CMakeLists.txt  Logs.txt  README.md  telegramBot.txt
src/: BotHandler.cpp  BotHandler.h  Logger.cpp  Logger.h  config.h.in  main.cpp
test/: CMakeLists.txt  TestLogger.cpp
